// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionItem actionItem variant 1`] = `
<a
  aria-label="d"
  className="action-item   action-item--variant-action-item  "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <div
    className="action-item__content"
  >
    <img
      className="icon-inline"
      src="u"
    />
     
    g: 
    t
  </div>
</a>
`;

exports[`ActionItem non-actionItem variant 1`] = `
<a
  aria-label="d"
  className="action-item     "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <div
    className="action-item__content"
  >
    <img
      className="icon-inline"
      src="u"
    />
     
    g: 
    t
  </div>
</a>
`;

exports[`ActionItem noop command 1`] = `
<span
  className="action-item  "
  data-tooltip="d"
>
  <img
    className="icon-inline"
    src="u"
  />
   
  g: 
  t
</span>
`;

exports[`ActionItem pressed actionItem 1`] = `
<a
  className="action-item   action-item--variant-action-item action-item--pressed  "
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <div
    className="action-item__content"
  >
     
    b
  </div>
</a>
`;

exports[`ActionItem render as link for "open" command 1`] = `
<a
  className="action-item     "
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  to="https://example.com"
>
  <div
    className="action-item__content"
  >
     
    
    t
  </div>
</a>
`;

exports[`ActionItem run command 1`] = `
<a
  aria-label="d"
  className="action-item   action-item--variant-action-item  disabled"
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <div
    className="action-item__content"
  >
    <img
      className="icon-inline"
      src="u"
    />
     
    g: 
    t
  </div>
</a>
`;

exports[`ActionItem run command 2`] = `
<a
  aria-label="d"
  className="action-item   action-item--variant-action-item  "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <div
    className="action-item__content"
  >
    <img
      className="icon-inline"
      src="u"
    />
     
    g: 
    t
  </div>
</a>
`;

exports[`ActionItem run command with error 1`] = `
<a
  aria-label="d"
  className="action-item   action-item--variant-action-item  "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <div
    className="action-item__content"
  >
    <img
      className="icon-inline"
      src="u"
    />
     
    g: 
    t
  </div>
</a>
`;

exports[`ActionItem run command with error with showInlineError 1`] = `
<a
  aria-label="Error: x"
  className="action-item   action-item--variant-action-item  "
  data-tooltip="Error: x"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <div
    className="action-item__content"
  >
    <img
      className="icon-inline"
      src="u"
    />
     
    g: 
    t
  </div>
</a>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 1`] = `
<a
  aria-label="d"
  className="action-item  action-item--loading action-item--variant-action-item  disabled"
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <div
    className="action-item__content"
  >
    <img
      className="icon-inline"
      src="u"
    />
     
    g: 
    t
  </div>
  <div
    className="action-item__loader"
  >
    <div
      className="loading-spinner icon-inline"
    />
  </div>
</a>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 2`] = `
<a
  aria-label="d"
  className="action-item   action-item--variant-action-item  "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <div
    className="action-item__content"
  >
    <img
      className="icon-inline"
      src="u"
    />
     
    g: 
    t
  </div>
</a>
`;

exports[`ActionItem title element 1`] = `
<a
  aria-label="d"
  className="action-item   action-item--variant-action-item  "
  data-tooltip="d"
  onAuxClick={[Function]}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <div
    className="action-item__content"
  >
    <span>
      t2
    </span>
  </div>
</a>
`;
